
Version 0.4p
------------
* Fixed a bug related to Zebras (specifically when viewing their offspring in the nursery, but likely to have other effects too)
* The usual bugs and typos
* Fixed some weirdness in Cale's Rogue training fuck, [Take it] branch
* Fixed a bug that would crash the game if a very specific set of actions were taken during the intro
* Added the Infertilium and Infertilium+ potions, which work as contraceptives. Adds a debuff for 1 or 5 days that almost certainly prevents pregnancy. Buy them from Patchwork for the moment

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4o
------------
* Typos and bugfixes galore
* Persistent status effects have been coded
 - For now, you can get some stat boosts from Cveta's performances
 - You can also get an experience boost from the food in the LB inn
 - The same experience boost is added at the end of the Halloween event (bit late for it, but oh well)
 - Getting food from Momo also gives the exp buff
* Added a lot of pregnancy triggers (including stuff for mpreg). Holler if you find a scene which you feel should trigger an impregnation but doesn't, report it
* Restricted the effects of Testos. If you are pregnant, that womb cannot be removed by the TF
* Added Cassidy the weapon shop owner to Rigard, written by The Observer.
* Added initial talks + talk menu to Orchid. A work in progress. Written by LukaDoc and sponsored by Patreon

Version 0.4n2
-------------
* Fixed a bug with Anusol-crafting
* Fixed a bug that would lock you in the toy masturbation menu. Menu is now unavailable if no valid toy is present
* Fixed a bunch of typos
* Masturbating with toys now increases your stretch the same way that being fucked would. This means you can gradually build up to taking larger insertions

Version 0.4n
------------
* Bugfixing
* Added masturbation options for the PC
 - Cock. Written by LukaDoc. Patreon-sponsored