@@ -11,6 +11,8 @@ Version 0.4p
 * The usual bugs and typos
 * Fixed some weirdness in Cale's Rogue training fuck, [Take it] branch
 * Fixed a bug that would crash the game if a very specific set of actions were taken during the intro
+* The old Fertilium potion was renamed to Gestarium+. Its potence has increased slightly
+* Added a new Fertilium and Fertilium+ potions, which work as a potency enhancers. Adds a buff for 1 day or 5 days that greatly increases chances of impregnating and getting pregnant. Buy them from Patchwork for the moment
 * Added the Infertilium and Infertilium+ potions, which work as contraceptives. Adds a debuff for 1 or 5 days that almost certainly prevents pregnancy. Buy them from Patchwork for the moment
 
 --------------------------------------------
